--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,10 @@
   <property name="build.dir" value="build"/>
   <property name="dist.dir"  value="dist"/>
   <property name="junit.dir" value="/var/lib/jenkins/workspace/Helloworld/Reports"/>
-
+<!--
+  <property name="junit.dir" value="junit-results"/>
+  <property name="dest.dir" value="/var/lib/jenkins/workspace/Helloworld/Reports"/>
+-->
   <property name="junit.jar" location="/usr/local/share/java/classes/junit.jar"/>
   <property name="test.class" value="TestHello"/>
 
@@ -34,7 +37,14 @@
     </junit>
     <fail message="Tests failed: check test reports." if="test.failed" />
   </target>
-
+<!--
+  <touch>
+    <fileset dir="${dest.dir}"/>
+  </touch>
+  <copy todir="${dest.dir}" overwrite="false">
+    <fileset dir="${junit.dir}/*"/>
+  </copy>
+-->
   <target name="dist" depends="build" description="generate the distribution" >
     <jar jarfile="${dist.dir}/hello.jar" basedir="${build.dir}">
       <manifest>
