--- a/build.xml
+++ b/build.xml
@@ -3,11 +3,11 @@
   <property name="src.dir"   value="."/>
   <property name="build.dir" value="build"/>
   <property name="dist.dir"  value="dist"/>
-  <property name="junit.dir" value="/var/lib/jenkins/workspace/Helloworld/Reports"/>
 <!--
+  <property name="junit.dir" value="/var/lib/jenkins/workspace/Helloworld/Reports"/>
+-->
   <property name="junit.dir" value="junit-results"/>
   <property name="dest.dir" value="/var/lib/jenkins/workspace/Helloworld/Reports"/>
--->
   <property name="junit.jar" location="/usr/local/share/java/classes/junit.jar"/>
   <property name="test.class" value="TestHello"/>
 
@@ -20,6 +20,7 @@
     <mkdir dir="${build.dir}"/>
     <mkdir dir="${dist.dir}"/>
     <mkdir dir="${junit.dir}"/>
+    <mkdir dir="${dest.dir}"/>
   </target>
 
   <target name="build" depends="init" description="build everything under ${src.dir}" >
@@ -37,14 +38,16 @@
     </junit>
     <fail message="Tests failed: check test reports." if="test.failed" />
   </target>
+
 <!--
   <touch>
     <fileset dir="${dest.dir}"/>
   </touch>
-  <copy todir="${dest.dir}" overwrite="false">
-    <fileset dir="${junit.dir}/*"/>
-  </copy>
 -->
+  <copy todir="${dest.dir}" overwrite="false">
+    <fileset dir="${junit.dir}" excludes="**/*.xml"/>
+  </copy>
+ 
   <target name="dist" depends="build" description="generate the distribution" >
     <jar jarfile="${dist.dir}/hello.jar" basedir="${build.dir}">
       <manifest>
